# dotenv

./: .env  Cargo.toml  README.md
dotenv/src/: find.rs  lib.rs  parse.rs
dotenv/tests/common/: mod.rs
dotenv_codegen/: Cargo.toml
dotenv_codegen/src/: lib.rs
dotenv_codegen/tests/: parse_dotenv.rs
dotenv_codegen_implementation/: Cargo.toml
dotenv_codegen_implementation/src/: lib.rs
rotenv/: Cargo.toml
rotenv/examples/: simple.rs
rotenv/src/: errors.rs  lib.rs
rotenv/tests/: test-child-dir.rs  test-default-location.rs  test-dotenv-iter.rs  test-from-filename-iter.rs  test-from-filename.rs  test-from-path-iter.rs  test-from-path.rs  test-var.rs  test-variable-substitution.rs  test-vars.rs
rotenv_codegen/: Cargo.toml
rotenv_codegen/src/: lib.rs
rotenv_codegen/tests/: basic_dotenv_macro.rs  parse_dotenv.rs
