[lib]
proc-macro = true

[package]

name = "rotenv_codegen"
version = "0.15.0"
authors = [
  "Juliette Cordor",
  "Santiago Lapresta <santiago.lapresta@gmail.com>",
  "Craig Hills <chills@gmail.com>",
  "Mike Piccolo <mfpiccolo@gmail.com>",
  "Alice Maz <alice@alicemaz.com>",
  "Sean Griffin <sean@seantheprogrammer.com>",
]
readme = "../README.md"
keywords = ["environment", "env", "dotenv", "settings", "config"]
license = "MIT"
homepage = "https://github.com/jewlexx/dotenv"
repository = "https://github.com/jewlexx/dotenv"
description = "A `dotenv` implementation for Rust"
edition = "2018"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full"] }
rotenv = { version = "0.15", path = "../rotenv" }
litrs = "0.2.3"
